RESOLVED FIXED57270
Search field focus ring is missing
https://bugs.webkit.org/show_bug.cgi?id=57270
Summary Search field focus ring is missing
Anders Carlsson
Reported 2011-03-28 14:47:32 PDT
Search field focus ring is missing
Attachments
Patch (1.09 KB, patch)
2011-03-28 14:48 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-28 14:48:17 PDT
Anders Carlsson
Comment 2 2011-03-28 15:02:03 PDT
Note You need to log in before you can comment on or make changes to this bug.