2011-03-28  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Search field focus ring is missing
        https://bugs.webkit.org/show_bug.cgi?id=57270
        <rdar://problem/8765555>

        Add an _automaticFocusRingDisabled method which returns YES.

        * platform/mac/ThemeMac.mm:
        (-[WebCoreFlippedView _automaticFocusRingDisabled]):


Canonical link: https://commits.webkit.org/71965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82163 268f45cc-cd09-0410-ab3c-d52691b4dbfc